--- a/templates/summerOutfit.hbs
+++ b/templates/summerOutfit.hbs
@@ -54,6 +54,10 @@
       <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">{{name}}</div>
       <p class="mt-8 mb-8">{{richTextDescription}}</p>
     </div>
+    <div class="container py-8 px-6 mx-auto">
+      <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">{{name}}</div>
+      <p class="mt-8 mb-8">{{richTextDescription}}</p>
+    </div>
     {{#each c_relatedProducts}}
       <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
           <div class="col-span-2">
