--- a/templates/product.hbs
+++ b/templates/product.hbs
@@ -53,6 +53,11 @@
                 {{>photoGallery photoGallery}}
             </div>
         </div>
+        <div class="col-span-1">
+            <div class="w-full md:w-full lg:scale-80 p-6 flex flex-col space-y-6">
+                {{>photoGallery photoGallery}}
+            </div>
+        </div>
 
         <div class="col-span-1">
             <div class="container py-8 px-6 mx-auto">
