--- a/templates/productCategory.hbs
+++ b/templates/productCategory.hbs
@@ -35,7 +35,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{{name}}</title>
-    <meta name="description" content=Category page for {{name}}.>
+    <meta name="description" content=Category page for TEST {{name}}.>
     
     {{>head}}
     {{!-- <link href="https://unpkg.com/tailwindcss/dist/tailwind.min.css" rel="stylesheet"> --}}
@@ -59,7 +59,6 @@
       <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
           <div class="col-span-2">
               <div class="w-full md:w-full lg:scale-80 p-6 flex flex-col space-y-6">
-                  {{>photoGallery photoGallery}}
               </div>
           </div>
 
