--- a/templates/summerOutfit.hbs
+++ b/templates/summerOutfit.hbs
@@ -9,6 +9,7 @@
         "uid",
         "name",
         "slug",
+        "list",
         "richTextDescription",
         "c_relatedProducts.name",
         "c_relatedProducts.slug",
@@ -58,6 +59,7 @@
       <div class="uppercase tracking-wide no-underline hover:no-underline font-bold text-gray-800 text-2xl mb-8">{{name}}</div>
       <p class="mt-8 mb-8">{{richTextDescription}}</p>
     </div>
+    
     {{#each c_relatedProducts}}
       <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
           <div class="col-span-2">
@@ -83,6 +85,16 @@
           </div>
       </div>
     {{/each}}
+    <div class="section">{{>faqs (sortBy c_relatedProducts "price")}}</div>     
+    {{#each (sort list) }}
+            <li> {{this}} </li>
+    {{/each}}
+    {{#each (sortList list false) }}
+            <li> {{this}} </li>
+    {{/each}}
+    <div class="section">{{length list}}</div>
+    <div class="section">{{compare list[0] 12}}</div>
+    <div class="section">{{contains list "test"}}</div>
 
     </body> 
 
