--- a/templates/summerOutfit.hbs
+++ b/templates/summerOutfit.hbs
@@ -60,7 +60,7 @@
       <p class="mt-8 mb-8">{{richTextDescription}}</p>
     </div>
     
-    {{#each c_relatedProducts}}
+    {{#each (sortBy c_relatedProducts "price")}}
       <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
           <div class="col-span-2">
               <div class="w-full md:w-full lg:scale-80 p-6 flex flex-col space-y-6">
@@ -85,7 +85,6 @@
           </div>
       </div>
     {{/each}}
-    <div class="section">{{>faqs (sortBy c_relatedProducts "price")}}</div>     
     {{#each (sort list) }}
             <li> {{this}} </li>
     {{/each}}
