--- a/templates/summerOutfit.hbs
+++ b/templates/summerOutfit.hbs
@@ -84,12 +84,12 @@
           </div>
       </div>
     {{/each}}
-    {{#each (sort list) }}
+    {{!-- {{#each (sort list) }}
             <li> {{this}} </li>
     {{/each}}
     {{#each (sortList list false) }}
             <li> {{this}} </li>
-    {{/each}}
+    {{/each}} --}}
     <div class="section">{{length c_relatedProducts}}</div>
     <div class="section">{{compare "test" 123}}</div>
     <div class="section">{{contains c_relatedProducts "test"}}</div>
