valid config tempfunc test4

--- a/templates/summerOutfit.hbs
+++ b/templates/summerOutfit.hbs
@@ -90,9 +90,9 @@
     {{#each (sortList list false) }}
             <li> {{this}} </li>
     {{/each}} --}}
-    <div class="section">{{length c_relatedProducts}}</div>
+    {{!-- <div class="section">{{length c_relatedProducts}}</div>
     <div class="section">{{compare "test" 123}}</div>
-    <div class="section">{{contains c_relatedProducts "test"}}</div>
+    <div class="section">{{contains c_relatedProducts "test"}}</div> --}}
 
     </body> 
 
