--- a/templates/summerOutfit.hbs
+++ b/templates/summerOutfit.hbs
@@ -59,7 +59,7 @@
       <p class="mt-8 mb-8">{{richTextDescription}}</p>
     </div>
     
-    {{#each (sortBy c_relatedProducts "name")}}
+    {{#each c_relatedProducts}}
       <div class="grid grid-cols-7 divide-gray-300 divide-y-4 gap-3 pl-10">
           <div class="col-span-2">
               <div class="w-full md:w-full lg:scale-80 p-6 flex flex-col space-y-6">
